--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,3 +18,4 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FINDCOACH_FC }}'
           channelId: live
           projectId: findcoach-fc
+          entryPoint: 'Mini Projects/Coach-Finder'
