--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,6 +6,8 @@ name: Deploy to Firebase Hosting on merge
   push:
     branches:
       - main
+    paths:
+      - 'Mini Projects/Coach-Finder/**'
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
